--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==2.0.0
 Django==4.2
 django-admin-interface==0.24.2
 django-colorfield==0.8.0
+django-environ==0.10.0
 django-heroku==0.3.1
 django-pandas==0.6.6
 gunicorn==20.1.0
