--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-environ==0.10.0
 django-heroku==0.3.1
 django-pandas==0.6.6
 gunicorn==20.1.0
+mysqlclient==2.1.1
 numpy==1.24.2
 pandas==2.0.0
 Pillow==9.5.0
